# appr

./: .env.example  .gitignore  README.md  app-inventory.html  docker-compose.override.yml  docker-compose.yml  sample-data.json  status.html
.github/: copilot-instructions.md  technology-stack.yml
.github/agents/: architecture-reviewer.agent.md  coder.agent.md  documentation.agent.md  security-review.agent.md  technical-product-documentation.agent.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: audit_logs.py  auth.py  components.py  health.py  incidents.py  people.py  products.py  repositories.py  resources.py  router.py  scorecards.py  services.py  teams.py  users.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py  telemetry.py
backend/app/middleware/: cors.py  logging_middleware.py  request_id.py  tenant.py
backend/app/models/: associations.py  audit_log.py  base.py  component.py  entity_assignment.py  enums.py  incident.py  person.py  product.py  refresh_token.py  repository.py  resource.py  scorecard.py  service.py  team.py  tenant.py  user.py
backend/app/repositories/: base.py
backend/app/schemas/: auth.py  catalog.py  common.py  health.py  user.py
backend/app/services/: audit_service.py  auth_service.py  base.py  oidc_service.py
backend/app/tasks/: celery_app.py
backend/migrations/: env.py
backend/migrations/versions/: 20260221_0001_initial_schema.py
backend/tests/: conftest.py  test_audit_logs.py  test_auth.py  test_catalog.py  test_health.py  test_incidents.py  test_services.py  test_users.py
docs/tprd/: README.md  TPRD-2026-02-18-authentication-authorization.md  TPRD-2026-02-18-core-data-models.md  TPRD-2026-02-18-dependency-graph.md  TPRD-2026-02-18-frontend-application.md  TPRD-2026-02-18-graphql-api.md  TPRD-2026-02-18-incident-management.md  (+6 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+26 files in other folders)
